one more remaining in desktop view

--- a/index.html
+++ b/index.html
@@ -388,19 +388,6 @@
     <!-- =====================services=end============================================================= -->
     <!-- =====================Provide================================================================= -->
     <section id="provide" >
-        <!-- <div class="container text-center">
-            <div class="row">
-              <div class="col">
-                Column
-              </div>
-              <div class="col">
-                Column
-              </div>
-              <div class="col">
-                Column
-              </div>
-            </div>
-          </div> -->
        <div class="container-fluid">
         <div class="row gx-0 provide-content">
             <div class=" col-5 provide-left">
@@ -471,6 +458,134 @@
         
     </section>
     <!-- =====================Provide=end============================================================= -->
+    <!-- =====================Lock================================================================= -->
+    <div id="lock">
+        <div class="lock-content">
+            <h2>We are the locksmith <br>
+                you can trust.
+            </h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar. Lorem <br> ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar. </p>
+            <div class="provide-boxes">
+                <div class="provide-box">
+                    <div class="provide-img">
+                        <img src="images/lock-1.png" alt="">
+                    </div>
+                    <h3>Make Appointment</h3>
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span>More...</span></h4>
+                    <div class="number">
+                        <h5>1</h5>
+                    </div>
+                </div>
+                <div class="provide-box">
+                    <div class="provide-img">
+                        <img src="images/lock-2.png" alt="">
+                    </div>
+                    <h3>We Arrive Within 1 Hour</h3>
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span>More...</span></h4>
+                    <div class="number">
+                        <h5>2</h5>
+                    </div>
+                </div>
+                <div class="provide-box">
+                    <div class="provide-img">
+                        <img src="images/lock-3.png" alt="">
+                    </div>
+                    <h3>Solve Your Problem</h3>
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span>More...</span></h4>
+                    <div class="number">
+                        <h5>3</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- =====================Lock=end============================================================= -->
+    <!-- =====================Appoint================================================================= -->
+    <section id="appoint">
+        <div class="appoint-content">
+            <div class="appoint-img">
+                <img src="images/appointment-head.png" alt="">
+            </div>
+            <h3>For all your key needs,<br>
+                we are ready to help you!
+            </h3>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, <br>  luctus  necullamcorper mattis, pulvinar dapibus leo.
+            </h4>
+            <a href="#" class="appoint-btn hvr-sweep-to-right">
+                <span>Make an Appointment</span>
+            </a>
+        </div>
+    </section>
+    <!-- =====================Appoint=end============================================================= -->
+    <!-- =====================Testi================================================================= -->
+    <section id="testi">
+        <div class="testi-content">
+            <div class="row">
+                <div class="col-4 testi-left">
+                    <h2>Testimonials</h2>
+                    <h3>What our <br>
+                        client say's</h3>
+                </div>
+                <div class="col-8 testi-right">
+                    <h4>&#10077;</h4>
+                    <div class="owl-carousel owl-theme owl-testi">
+                        <div class="item">
+                            <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</h5>
+                            <div class="testi-right-left">
+                                <div class="testi-img">
+                                    <img src="images/testi-profile.png" alt="">
+                                </div>
+                                <div class="testi-right-left-content">
+                                    <h6>Pranil <br>
+                                        <span>Designation</span>
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</h5>
+                            <div class="testi-right-left">
+                                <div class="testi-img">
+                                    <img src="images/testi-profile.png" alt="">
+                                </div>
+                                <div class="testi-right-left-content">
+                                    <h6>Pranil <br>
+                                        <span>Designation</span>
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =====================Testi=end============================================================= -->
+    <!-- =====================Contact================================================================= -->
+    <section id="contact">
+        <div class="contact-content">
+            <h2>Need a Locksmith? <br>
+                WelCome to You!
+            </h2>
+            <div class="contact-inputs">
+                <div class="left-input">
+                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="First Name">
+                    <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Phone">
+                    <textarea class="form-control" placeholder="How can we help you?" id="floatingTextarea"></textarea>
+                </div>
+                <div class="right-input">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                    <input type="address" class="form-control" id="exampleFormControlInput1" placeholder="Address">
+                    <div class="contact-submit-btn">
+                        <a href="#" class="contact-btn hvr-outline-in ">
+                        <span>Submit</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =====================Contact=end============================================================= -->
     </main>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium quas doloremque sit unde, omnis vel dicta, officiis sint error fugit quidem quos ipsam id tenetur quia nam dolore animi enim quod nemo ad velit placeat minus repudiandae? Quisquam fugit perspiciatis necessitatibus inventore, aspernatur consectetur dolorum id optio voluptatibus rerum corporis odio molestiae eius, nihil atque ab laudantium. Voluptate consequatur, sunt ipsum officiis blanditiis natus libero quis quibusdam minima non, soluta architecto voluptas! Pariatur veniam, magnam sequi doloribus voluptates dolor explicabo beatae obcaecati dignissimos unde deleniti totam saepe cum, quas quia vel alias quisquam quibusdam quaerat repellendus nulla? Reiciendis in pariatur culpa doloribus ipsam itaque! Dolor accusantium, facere doloribus blanditiis cupiditate non dolore beatae ipsam est sed, enim aperiam atque aut rem illo, impedit deserunt perferendis ab incidunt ratione quo quis. Perferendis reiciendis, dicta rem aut nulla excepturi similique inventore voluptatum ratione sed hic voluptatem? Recusandae officia fuga mollitia ducimus repudiandae ea amet aspernatur corrupti nostrum esse natus, dicta excepturi nobis, ab eaque rem nesciunt assumenda? Perferendis esse maiores praesentium adipisci est, voluptatum similique! Voluptatum iusto quam tempore quisquam delectus officiis vel exercitationem pariatur repellat. Sit, vero. Mollitia quisquam facilis, cum quasi nam magnam velit necessitatibus vel? Voluptatum odio deleniti, quam aperiam eos eligendi earum assumenda non voluptates iusto accusantium, harum ad recusandae odit. Incidunt esse iste, earum natus doloremque quae voluptatibus veniam obcaecati fugiat? Pariatur quasi expedita libero eum tempora amet! Nulla alias molestias, ex dolorum nisi soluta quis voluptatibus rerum eveniet odio? Cum quae beatae sequi ea accusantium quia possimus ex sapiente perferendis, voluptatem consequuntur! Hic, vel? Sed, molestiae? Ullam harum nihil vitae ipsum ad eligendi nesciunt quas praesentium. Ex dolorem voluptates explicabo excepturi nulla quis ipsa optio dicta architecto iure ad, blanditiis minima omnis eveniet dolorum recusandae ratione at laboriosam ea dolores veritatis exercitationem incidunt ullam. Voluptate deleniti nesciunt reiciendis, eligendi pariatur perferendis. Est soluta accusantium minus iste tempora earum distinctio ullam quia, voluptatibus corporis ipsa, rem accusamus quidem sunt unde ex officia ut reiciendis. Recusandae laborum deleniti, voluptate ex atque nostrum. Aliquam architecto repellendus nemo molestiae ea explicabo expedita corrupti, perspiciatis amet neque possimus consectetur dolore recusandae voluptates quam labore iste beatae sed esse est. Odit esse doloribus, quasi iure quas labore accusantium id non quia maxime nemo, consequuntur sint dolor neque mollitia? Libero vero iste molestiae natus quidem, eligendi eius nesciunt possimus rerum earum voluptatum, repellat asperiores repellendus praesentium accusantium neque repudiandae aperiam eveniet laboriosam quis.
     <script src="js/jquery.min.js"></script>
@@ -507,6 +622,7 @@
             loop:true,
             margin:130,
             nav:true,
+            responsiveClass:true,
             dots:false,
             navText: ['<i class="fa fa-caret-left" aria-hidden="true"></i>',
             '<i class="fa fa-caret-right" aria-hidden="true"></i>'],
@@ -543,6 +659,28 @@
         1000:{
             items:2,
             nav:true,
+        }
+    }
+})
+   </script>
+   <script>
+    $('.owl-testi').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    dots:false,
+    responsiveClass:true,
+    navText: ['<i class="fa fa-caret-left" aria-hidden="true"></i>',
+            '<i class="fa fa-caret-right" aria-hidden="true"></i>'],
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:1
+        },
+        1000:{
+            items:1
         }
     }
 })
