--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a class="nav-link active hvr-underline-from-center" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link hvr-underline-from-center" href="#">About Keystone</a>
+                    <a class="nav-link hvr-underline-from-center" href="#tab">About Keystone</a>
                   </li>
                   <a class="navbar-brand navbar-brand-two" href="#"><img src="images/logo.png" alt=""></a>
                   <li class="nav-item dropdown">
@@ -73,12 +73,12 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link hvr-underline-from-center" href="#">Contact</a>
+                    <a class="nav-link hvr-underline-from-center" href="#contact">Contact</a>
                   </li>
                 </ul>
               </div>
               <div class="navbar-btn-two">
-                <a href="#" class="navbar-btn hvr-bounce-to-left">
+                <a href="#" class="navbar-btn hvr-outline-in">
                     <span>Enquiry</span>
                 </a>
               </div>
@@ -90,47 +90,50 @@
     <main>
     <!-- =====================Carousel================================================================= -->
     <section id="carousel">
-        <div id="carouselExampleCaptions" class="carousel slide">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item active" data-bs-interval="10000">
                 <img src="images/Carousel-back.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">          
                   <p>Professional <br>
                     Locksmith <br>
                     Services.</p>
-                    <a href="#" class="carousel-btn hvr-bounce-to-right">
+                    <!-- <a href="#" class="carousel-btn hvr-bounce-to-right">
                         <span>more</span>
-                    </a>
+                    </a> -->
                 </div>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="10000">
                 <img src="images/Carousel-back.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
                   <p>Professional <br>
                     Locksmith <br>
                     Services.</p>
-                    <a href="#" class="carousel-btn hvr-bounce-to-right">
+                    <!-- <a href="#" class="carousel-btn hvr-bounce-to-right">
                         <span>more</span>
-                    </a>
+                    </a> -->
                 </div>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="10000">
                 <img src="images/Carousel-back.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
                   <p>Professional <br>
                     Locksmith <br>
                     Services.</p>
-                    <a href="#" class="carousel-btn hvr-bounce-to-right">
+                    <!-- <a href="#" class="carousel-btn hvr-bounce-to-right">
                         <span>more</span>
-                    </a>
+                    </a> -->
                 </div>
               </div>
             </div>
+            <a href="#" class="carousel-btn hvr-bounce-to-right">
+                <span>more</span>
+            </a>
             <div class="overlay">
 
             </div>
@@ -586,8 +589,45 @@
         </div>
     </section>
     <!-- =====================Contact=end============================================================= -->
-    </main>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium quas doloremque sit unde, omnis vel dicta, officiis sint error fugit quidem quos ipsam id tenetur quia nam dolore animi enim quod nemo ad velit placeat minus repudiandae? Quisquam fugit perspiciatis necessitatibus inventore, aspernatur consectetur dolorum id optio voluptatibus rerum corporis odio molestiae eius, nihil atque ab laudantium. Voluptate consequatur, sunt ipsum officiis blanditiis natus libero quis quibusdam minima non, soluta architecto voluptas! Pariatur veniam, magnam sequi doloribus voluptates dolor explicabo beatae obcaecati dignissimos unde deleniti totam saepe cum, quas quia vel alias quisquam quibusdam quaerat repellendus nulla? Reiciendis in pariatur culpa doloribus ipsam itaque! Dolor accusantium, facere doloribus blanditiis cupiditate non dolore beatae ipsam est sed, enim aperiam atque aut rem illo, impedit deserunt perferendis ab incidunt ratione quo quis. Perferendis reiciendis, dicta rem aut nulla excepturi similique inventore voluptatum ratione sed hic voluptatem? Recusandae officia fuga mollitia ducimus repudiandae ea amet aspernatur corrupti nostrum esse natus, dicta excepturi nobis, ab eaque rem nesciunt assumenda? Perferendis esse maiores praesentium adipisci est, voluptatum similique! Voluptatum iusto quam tempore quisquam delectus officiis vel exercitationem pariatur repellat. Sit, vero. Mollitia quisquam facilis, cum quasi nam magnam velit necessitatibus vel? Voluptatum odio deleniti, quam aperiam eos eligendi earum assumenda non voluptates iusto accusantium, harum ad recusandae odit. Incidunt esse iste, earum natus doloremque quae voluptatibus veniam obcaecati fugiat? Pariatur quasi expedita libero eum tempora amet! Nulla alias molestias, ex dolorum nisi soluta quis voluptatibus rerum eveniet odio? Cum quae beatae sequi ea accusantium quia possimus ex sapiente perferendis, voluptatem consequuntur! Hic, vel? Sed, molestiae? Ullam harum nihil vitae ipsum ad eligendi nesciunt quas praesentium. Ex dolorem voluptates explicabo excepturi nulla quis ipsa optio dicta architecto iure ad, blanditiis minima omnis eveniet dolorum recusandae ratione at laboriosam ea dolores veritatis exercitationem incidunt ullam. Voluptate deleniti nesciunt reiciendis, eligendi pariatur perferendis. Est soluta accusantium minus iste tempora earum distinctio ullam quia, voluptatibus corporis ipsa, rem accusamus quidem sunt unde ex officia ut reiciendis. Recusandae laborum deleniti, voluptate ex atque nostrum. Aliquam architecto repellendus nemo molestiae ea explicabo expedita corrupti, perspiciatis amet neque possimus consectetur dolore recusandae voluptates quam labore iste beatae sed esse est. Odit esse doloribus, quasi iure quas labore accusantium id non quia maxime nemo, consequuntur sint dolor neque mollitia? Libero vero iste molestiae natus quidem, eligendi eius nesciunt possimus rerum earum voluptatum, repellat asperiores repellendus praesentium accusantium neque repudiandae aperiam eveniet laboriosam quis.
+</main>
+<footer>
+    <!-- =====================Footer================================================================= -->
+    <section id="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="images/footer-logo.png" alt="">
+            </div>
+            <ul class="footer-list-one">
+                <li>Home</li>
+                <li>About Keystone</li>
+                <li>Our Services</li>
+                <li>Contact</li>
+            </ul>
+            <ul class="footer-list-two">                
+                <li>Help Center</li>
+                <li>Sales Support</li>
+                <li>Technical Support</li>
+                <li>location</li>
+                <li>FAQ</li>
+            </ul>
+            <h2>Address: 01234 X Lorem Ipsum is simply dummy, United States</h2>
+            <h5>Call Us: +1 23-123-1234</h5>
+            <div class="footer-icons">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <h4>All rights reserved, Copyrights ©2024 Keystone <br>
+                Powered by Aries Connects World</h4>
+        </div>
+    </section>
+    <!-- =====================Footer=end============================================================= -->
+    <!-- =====================Top================================================================= -->
+    <!-- <a id="back_click_top" class="show"><i class="fa fa-arrow-up" aria-hidden="true"></i></a> -->
+    <a id="back_click_top" class="show"><img src="images/key.png" alt=""></a>
+    <!-- =====================Top=end============================================================= -->
+</footer>
     <script src="js/jquery.min.js"></script>
     <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
     <script src="owl/js/owl.carousel.min.js"></script>
@@ -600,6 +640,21 @@
     <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
     </script>
+    <script>
+        var btn = $('#back_click_top');
+        $(window).scroll(function () {
+          if ($(window).scrollTop() > 300) {
+            btn.addClass('show');
+          } else {
+            btn.removeClass('show');
+          }
+        });
+    
+        btn.on('click', function (e) {
+          e.preventDefault();
+          $('html, body').animate({ scrollTop: 0 }, '300');
+        });
+      </script>
     <script>
         $(".navbar-nav .nav-item .nav-link").on("click", function () {
             $(".navbar").find(".active").removeClass("active");
