--- a/index.html
+++ b/index.html
@@ -40,6 +40,41 @@
 
 <body>
     <header>
+    <div id="navbar-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><i class="fa-solid fa-bars-staggered"></i></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#tab">About Keystone</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Our  Services
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Dummy 1</a></li>
+                        <li><a class="dropdown-item" href="#">Dummy 2</a></li>
+                        <li><a class="dropdown-item" href="#">Dummy 3</a></li>
+                        <li><a class="dropdown-item" href="#">Dummy 4</a></li>
+                        <li><a class="dropdown-item" href="#">Dummy 5</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="#contact">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </div>
     <!-- =====================Navbar================================================================= -->
     <section id="navbar">
         <nav class="navbar navbar-expand-lg ">
@@ -630,6 +665,7 @@
     <!-- <a id="back_click_top" class="show"><i class="fa fa-arrow-up" aria-hidden="true"></i></a> -->
     <a id="back_click_top" class="show"><img src="images/key.png" alt=""></a>
     <!-- =====================Top=end============================================================= -->
+
 </footer>
     <script src="js/jquery.min.js"></script>
     <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
