--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                  <li class="nav-item drop">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item drop">
                     <a class="nav-link" href="#tab">About Keystone</a>
                   </li>
                   <li class="nav-item dropdown">
@@ -60,14 +60,14 @@
                         Our  Services
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Dummy 1</a></li>
-                        <li><a class="dropdown-item" href="#">Dummy 2</a></li>
-                        <li><a class="dropdown-item" href="#">Dummy 3</a></li>
-                        <li><a class="dropdown-item" href="#">Dummy 4</a></li>
-                        <li><a class="dropdown-item" href="#">Dummy 5</a></li>
+                        <li class="drop"><a class="dropdown-item" href="#">Dummy 1</a></li>
+                        <li class="drop"><a class="dropdown-item" href="#">Dummy 2</a></li>
+                        <li class="drop"><a class="dropdown-item" href="#">Dummy 3</a></li>
+                        <li class="drop"><a class="dropdown-item" href="#">Dummy 4</a></li>
+                        <li class="drop"><a class="dropdown-item" href="#">Dummy 5</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item drop">
                     <a class="nav-link " href="#contact">Contact</a>
                   </li>
                 </ul>
@@ -786,6 +786,11 @@
         }
     }
 })
+   </script>
+   <script>
+    $('#navbar-top .navbar-nav .drop .nav-link').on('click', function () {
+      $('.navbar-collapse').collapse('hide');
+    });
    </script>
 </body>
 
