--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
                 </div>
                   </div>
         </div>
+        <div class="tab-animation">
+            <img src="images/anime-key-one.png" alt="">
+        </div>
     </section>
     <!-- =====================tab=end============================================================= -->
     <!-- =====================prof================================================================= -->
@@ -351,8 +354,10 @@
                 for ultimate security.</h3>
                 <div class="owl-carousel owl-theme owl-services">
                     <div class="item">
-                        <div class="card" style="width: m;">
+                        <div class="card" style="width: m;" >
+                           <div class="img-hover-zoom">
                             <img src="images/services-1.png" class="card-img-top" alt="...">
+                           </div>
                             <div class="card-body">
                               <h5 class="card-title">Key Duplication</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
@@ -364,7 +369,9 @@
                     </div>
                     <div class="item">
                         <div class="card" style="width: m;">
+                            <div class="img-hover-zoom">
                             <img src="images/services-2.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body">
                               <h5 class="card-title">Safe Lock</h5>
                               <p class="card-text">Safe locks play a crucial role in keeping your valuables secure. Traditional combination locks offer yet  method of securing your safe.</p>
@@ -376,7 +383,9 @@
                     </div>
                     <div class="item">
                         <div class="card" style="width: m;">
+                            <div class="img-hover-zoom">
                             <img src="images/services-3.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body">
                               <h5 class="card-title">Door Lock Installation</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
@@ -388,7 +397,9 @@
                     </div>
                     <div class="item">
                         <div class="card" style="width: m;">
-                            <img src="images/services-1.png" class="card-img-top" alt="...">
+                            <div class="img-hover-zoom">
+                                <img src="images/services-1.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body">
                               <h5 class="card-title">Key Duplication</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
@@ -400,7 +411,9 @@
                     </div>
                     <div class="item">
                         <div class="card" style="width: m;">
-                            <img src="images/services-2.png" class="card-img-top" alt="...">
+                            <div class="img-hover-zoom">
+                                <img src="images/services-2.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body">
                               <h5 class="card-title">Safe Lock</h5>
                               <p class="card-text">Safe locks play a crucial role in keeping your valuables secure. Traditional combination locks offer yet  method of securing your safe.</p>
@@ -412,7 +425,9 @@
                     </div>
                     <div class="item">
                         <div class="card" style="width: m;">
-                            <img src="images/services-3.png" class="card-img-top" alt="...">
+                            <div class="img-hover-zoom">
+                                <img src="images/services-3.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body">
                               <h5 class="card-title">Door Lock Installation</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
